--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,10 +1,8 @@
 
 <head>
-  <link rel="icon" href="/images/favicon2.ico">
-  <link rel="stylesheet" href="/css/ayerst.css">
+  <link rel="icon" href="images/favicon2.ico">
+  <link rel="stylesheet" type="text.css" href="css/ayerst.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-  <link rel="stylesheet" href="/css/slick-dots.css">
   <title>{{ site.title }}</title>
 </head>
