Fixed some image locations

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -125,7 +125,7 @@
     </li>
   </ul>
   <ul class="footer-links">
-    <li><img src="/images/ayerst-name.png"></li>
+    <li><img src="images/ayerst-name.png"></li>
     <li><a href="#"><h4>About</h4></a></li>
     <li><a href="#"><h4>Contact Us</h4></a></li>
   </ul>
