--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header>
   <div class="container">
     <a href="/">
-      <img href="#" src="/images/ayerst-logo.png">
+      <img href="#" src="images/ayerst-logo.png">
     </a>
     <div class="header-text">
       <h3>705-325-8767</h3>
