--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -61,10 +61,10 @@
         <div class="brand shade"></div>
       </div>
       <div class="brand-demo-logos">
-        <img class="logo maxxmar-logo" src="/images/demo-maxxmar-logo.jpg">
-        <img class="logo hunter-logo" src="/images/demo-hunter-logo.jpg">
-        <img class="logo elite-logo" src="/images/demo-elite-logo.jpg">
-        <img class="logo shade-logo" src="/images/demo-shade-logo.jpg">
+        <img class="logo maxxmar-logo" src="images/demo-maxxmar-logo.jpg">
+        <img class="logo hunter-logo" src="images/demo-hunter-logo.jpg">
+        <img class="logo elite-logo" src="images/demo-elite-logo.jpg">
+        <img class="logo shade-logo" src="images/demo-shade-logo.jpg">
       </div>
     </div>
 
