--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 
 <nav>
   <ul>
-    <li class="list-logo"><img src="/images/ayerst-logo.png"></li>
+    <li class="list-logo"><img src="images/ayerst-logo.png"></li>
     <li><a href="/"><h4>Home</h4></a></li>
     <li><a href="/about/"><h4>About</h4></a></li>
     <li><a href="/blinds/"><h4>Blinds</h4></a></li>
