--- a/_layouts/blinds.html
+++ b/_layouts/blinds.html
@@ -109,23 +109,23 @@
           </div>
 
           <div class="small-slide off-left">
-            <img src="/images/show-blinds-8.jpg">
+            <img src="images/show-blinds-8.jpg">
           </div>
 
           <div class="small-slide small-left">
-            <img src="/images/show-blinds-9.jpg">
+            <img src="images/show-blinds-9.jpg">
           </div>
 
           <div class="main-slide">
-            <img src="/images/show-blinds-1.jpg">
+            <img src="images/show-blinds-1.jpg">
           </div>
 
           <div class="small-slide small-right">
-            <img src="/images/show-blinds-2.jpg">
+            <img src="images/show-blinds-2.jpg">
           </div>
 
           <div class="small-slide off-right">
-            <img src="/images/show-blinds-3.jpg">
+            <img src="images/show-blinds-3.jpg">
           </div>
 
           <div class="right-scroll">
