--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,7 +28,7 @@
       <!-- <h1>Explore all your options</h1> -->
       <div class="home-images">
         <a href="/blinds/">
-          <img src="/images/home-blinds-square.jpg">
+          <img src="images/home-blinds-square.jpg">
           <div class="rollover">
             <h4>BLINDS</h4>
             <svg fill="#dddddd" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -38,7 +38,7 @@
           </div>
         </a>
         <a href="/shades/">
-          <img src="/images/home-shades-square.jpg">
+          <img src="images/home-shades-square.jpg">
           <div class="rollover">
             <h4>SHADES</h4>
             <svg fill="#dddddd" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +48,7 @@
           </div>
         </a>
         <a href="/shutters/">
-          <img src="/images/home-shutters-square.jpg">
+          <img src="images/home-shutters-square.jpg">
           <div class="rollover">
             <h4>SHUTTERS</h4>
             <svg fill="#dddddd" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -72,16 +72,16 @@
       <h1>Select products from the best window covering manufacturers in Canada.</h1>
       <div class="brand-list">
         <a href="http://www.maxxmar.com/" target="_blank">
-          <img src="/images/logo-maxxmar-grey.png">
+          <img src="images/logo-maxxmar-grey.png">
         </a>
         <a href="https://www.hunterdouglas.com/" target="_blank">
-          <img src="/images/logo-hunter-grey.png">
+          <img src="images/logo-hunter-grey.png">
         </a>
         <a href="http://www.elitewf.com/" target="_blank">
-          <img src="/images/logo-elite-grey.png">
+          <img src="images/logo-elite-grey.png">
         </a>
         <a href="http://shade-o-matic.com/" target="_blank">
-          <img src="/images/logo-shade-grey.png">
+          <img src="images/logo-shade-grey.png">
         </a>
       </div>
     </div>
