--- a/css/ayerst.css
+++ b/css/ayerst.css
@@ -9,7 +9,7 @@ html {
 header {
   height: 11vmin;
   width: 100%;
-  background: url("/images/grey-background.jpg");
+  background: url("images/grey-background.jpg");
   align-items: center; }
   header .container {
     width: 90%;
@@ -116,12 +116,12 @@ nav {
 
 body {
   width: 100%;
-  background-image: url("/images/black-background.jpg");
+  background-image: url("images/black-background.jpg");
   text-align: center; }
   body .fader {
     height: 82vmin;
     width: 100%;
-    background-image: url("/images/jumbo-white-4.jpg");
+    background-image: url("images/jumbo-white-4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -134,7 +134,7 @@ body {
   body .jumbotron {
     height: 82vmin;
     width: 100%;
-    background-image: url("/images/jumbo-white-4.jpg");
+    background-image: url("images/jumbo-white-4.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -171,7 +171,7 @@ body {
         transform: scale(0.95) translateY(1vh);
         box-shadow: 0px 2px 12px 2px #646464; }
   body .blurred {
-    background-image: url("/images/jumbo-white-2-blur.jpg"); }
+    background-image: url("images/jumbo-white-2-blur.jpg"); }
   body .main {
     width: 100%;
     display: flex;
@@ -202,24 +202,24 @@ body {
       font-size: 4vmin;
       font-style: italic;
       margin: 3vmin 0; }
-    body .showcase .home-images {
+    body .showcase .homeimages {
       margin: 0 auto;
       width: 100%;
       font-size: 0;
       display: flex;
       justify-content: space-around; }
-      body .showcase .home-images a {
+      body .showcase .homeimages a {
         width: 33.333%;
         height: 33vw;
         position: relative;
         display: flex;
         overflow: hidden; }
-        body .showcase .home-images a img {
+        body .showcase .homeimages a img {
           height: 100%;
           width: 100%;
           transition: 0.5s;
           font-size: 50px; }
-        body .showcase .home-images a .rollover {
+        body .showcase .homeimages a .rollover {
           height: 110%;
           width: 176%;
           background: rgba(0, 0, 0, 0.5);
@@ -228,13 +228,13 @@ body {
           left: -38%;
           transition: 1s;
           border-radius: 0 0 50% 50%; }
-          body .showcase .home-images a .rollover svg {
+          body .showcase .homeimages a .rollover svg {
             width: 8%;
             height: auto;
             position: absolute;
             bottom: -2%;
             left: 46%; }
-        body .showcase .home-images a h4 {
+        body .showcase .homeimages a h4 {
           font-size: 4vw;
           position: absolute;
           top: 0;
@@ -247,9 +247,9 @@ body {
           padding: 0vw 2vw;
           -webkit-transform-style: preserve-3d;
           -webkit-backface-visibility: hidden; }
-        body .showcase .home-images a:hover h4 {
+        body .showcase .homeimages a:hover h4 {
           opacity: 1; }
-        body .showcase .home-images a:hover .rollover {
+        body .showcase .homeimages a:hover .rollover {
           top: 0;
           background: rgba(0, 0, 0, 0.7); }
   body .brands {
@@ -259,7 +259,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: url("/images/grey-background.jpg"); }
+    background: url("images/grey-background.jpg"); }
     body .brands h1 {
       color: #555;
       font-style: italic;
@@ -297,7 +297,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("/images/grey-background.jpg"); }
+    background: url("images/grey-background.jpg"); }
     body .contact h1 {
       font-style: italic;
       color: #c39450;
@@ -312,7 +312,7 @@ body {
   body .van {
     height: 59vmin;
     width: 100%;
-    background: url("/images/ayerst-truck.jpg");
+    background: url("images/ayerst-truck.jpg");
     background-position: center;
     background-size: cover; }
 
@@ -335,7 +335,7 @@ footer {
       color: rgba(255, 255, 255, 0.7);
       text-decoration: none;
       transition: 0.5s;
-      background: url("/images/aw-logo-circle-transparent.png") no-repeat right;
+      background: url("images/aw-logo-circle-transparent.png") no-repeat right;
       background-size: contain;
       padding: 0 3.8vmin 0.3vmin 0;
       line-height: 4vmin; }
@@ -417,7 +417,7 @@ section {
   font-size: 20vmin; }
 
 #about .jumbotron {
-  background-image: url("/images/jumbo-white-5.jpg");
+  background-image: url("images/jumbo-white-5.jpg");
   background-position: center top; }
   #about .jumbotron h1 {
     font-size: 12vmin;
@@ -425,11 +425,11 @@ section {
 #about .mobile-service {
   width: 100%;
   height: 65vmin;
-  background: url("/images/ayerst-truck-2.jpg");
+  background: url("images/ayerst-truck-2.jpg");
   background-position: center 25%;
   background-size: cover; }
 #about .grey {
-  background-image: url("/images/grey-background.jpg"); }
+  background-image: url("images/grey-background.jpg"); }
   #about .grey h3 {
     font-size: 3.2vmin;
     letter-spacing: 1px;
@@ -450,7 +450,7 @@ section {
   #about .about-home-office .about-home {
     width: 50%;
     height: 100%;
-    background-image: url("/images/about-home.jpg");
+    background-image: url("images/about-home.jpg");
     display: inline-block;
     float: left;
     background-position: 20% center;
@@ -476,7 +476,7 @@ section {
   #about .about-home-office .about-office {
     width: 50%;
     height: 100%;
-    background-image: url("/images/about-office.jpg");
+    background-image: url("images/about-office.jpg");
     display: inline-block;
     background-size: cover;
     background-position: center; }
@@ -528,16 +528,16 @@ section {
         left: 0;
         bottom: 0; }
     #about .brand-demos .brand-container .maxxmar {
-      background-image: url("/images/demo-maxxmar-square.jpg"); }
+      background-image: url("images/demo-maxxmar-square.jpg"); }
     #about .brand-demos .brand-container .hunter {
-      background-image: url("/images/demo-hunter-square.jpg"); }
+      background-image: url("images/demo-hunter-square.jpg"); }
     #about .brand-demos .brand-container .elite {
-      background-image: url("/images/demo-elite-square.jpg"); }
+      background-image: url("images/demo-elite-square.jpg"); }
     #about .brand-demos .brand-container .shade {
-      background-image: url("/images/demo-shade-square.jpg"); }
+      background-image: url("images/demo-shade-square.jpg"); }
 
 #blinds .jumbotron {
-  background-image: url("/images/jumbo-blinds.jpg"); }
+  background-image: url("images/jumbo-blinds.jpg"); }
   #blinds .jumbotron h1 {
     color: #c39450;
     font-size: 15vmin;
@@ -545,7 +545,7 @@ section {
     max-width: 1200px;
     letter-spacing: 0.2vmin; }
 #blinds .showcase-area {
-  background: url("/images/grey-background.jpg");
+  background: url("images/grey-background.jpg");
   display: flex;
   flex-direction: column; }
   #blinds .showcase-area .view-selector {
@@ -624,16 +624,16 @@ section {
           background-size: cover;
           background-position: center; }
         #blinds .showcase-area .blind-showcase .grid .close-ups .image:first-child {
-          background-image: url("/images/show-blinds-1.jpg");
+          background-image: url("images/show-blinds-1.jpg");
           background-position: left center; }
         #blinds .showcase-area .blind-showcase .grid .close-ups .image:nth-child(2) {
-          background-image: url("/images/show-blinds-2.jpg");
+          background-image: url("images/show-blinds-2.jpg");
           background-position: left center; }
         #blinds .showcase-area .blind-showcase .grid .close-ups .image:nth-child(3) {
-          background-image: url("/images/show-blinds-3.jpg");
+          background-image: url("images/show-blinds-3.jpg");
           background-position: left center; }
         #blinds .showcase-area .blind-showcase .grid .close-ups .image:nth-child(4) {
-          background-image: url("/images/show-blinds-4.jpg");
+          background-image: url("images/show-blinds-4.jpg");
           background-position: left center; }
       #blinds .showcase-area .blind-showcase .grid .room-pics {
         display: flex;
@@ -647,7 +647,7 @@ section {
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
-          background-image: url("/images/show-blinds-5.jpg"); }
+          background-image: url("images/show-blinds-5.jpg"); }
         #blinds .showcase-area .blind-showcase .grid .room-pics .row-2 {
           width: 100%;
           height: 31.9vw;
@@ -660,14 +660,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-blinds-6.jpg"); }
+            background-image: url("images/show-blinds-6.jpg"); }
           #blinds .showcase-area .blind-showcase .grid .room-pics .row-2 div:last-child {
             width: 63.02%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-blinds-7.jpg"); }
+            background-image: url("images/show-blinds-7.jpg"); }
         #blinds .showcase-area .blind-showcase .grid .room-pics .row-3 {
           width: 100%;
           height: 36.8vw;
@@ -680,14 +680,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-blinds-8.jpg"); }
+            background-image: url("images/show-blinds-8.jpg"); }
           #blinds .showcase-area .blind-showcase .grid .room-pics .row-3 div:last-child {
             width: 36.11%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-blinds-9.jpg"); }
+            background-image: url("images/show-blinds-9.jpg"); }
     #blinds .showcase-area .blind-showcase .slides {
       width: 100%;
       height: 60vw;
@@ -775,7 +775,7 @@ section {
           margin: auto; }
 
 #shades .jumbotron {
-  background-image: url("/images/jumbo-shades.jpg"); }
+  background-image: url("images/jumbo-shades.jpg"); }
   #shades .jumbotron h1 {
     color: #c39450;
     font-size: 15vmin;
@@ -783,7 +783,7 @@ section {
     max-width: 1200px;
     letter-spacing: 0.2vmin; }
 #shades .showcase-area {
-  background: url("/images/grey-background.jpg");
+  background: url("images/grey-background.jpg");
   display: flex;
   flex-direction: column; }
   #shades .showcase-area .view-selector {
@@ -862,15 +862,15 @@ section {
           background-size: cover;
           background-position: center; }
         #shades .showcase-area .blind-showcase .grid .close-ups .image:first-child {
-          background-image: url("/images/show-shades-1.jpg");
+          background-image: url("images/show-shades-1.jpg");
           background-position: left center; }
         #shades .showcase-area .blind-showcase .grid .close-ups .image:nth-child(2) {
-          background-image: url("/images/show-shades-2.jpg"); }
+          background-image: url("images/show-shades-2.jpg"); }
         #shades .showcase-area .blind-showcase .grid .close-ups .image:nth-child(3) {
           background-position: left center;
-          background-image: url("/images/show-shades-3.jpg"); }
+          background-image: url("images/show-shades-3.jpg"); }
         #shades .showcase-area .blind-showcase .grid .close-ups .image:nth-child(4) {
-          background-image: url("/images/show-shades-4.jpg");
+          background-image: url("images/show-shades-4.jpg");
           background-position: left center; }
       #shades .showcase-area .blind-showcase .grid .room-pics {
         display: flex;
@@ -884,7 +884,7 @@ section {
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
-          background-image: url("/images/show-shades-5.jpg"); }
+          background-image: url("images/show-shades-5.jpg"); }
         #shades .showcase-area .blind-showcase .grid .room-pics .row-2 {
           width: 100%;
           height: 31.9vw;
@@ -897,14 +897,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shades-6.jpg"); }
+            background-image: url("images/show-shades-6.jpg"); }
           #shades .showcase-area .blind-showcase .grid .room-pics .row-2 div:last-child {
             width: 63.02%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shades-7.jpg"); }
+            background-image: url("images/show-shades-7.jpg"); }
         #shades .showcase-area .blind-showcase .grid .room-pics .row-3 {
           width: 100%;
           height: 36.8vw;
@@ -917,14 +917,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shades-8.jpg"); }
+            background-image: url("images/show-shades-8.jpg"); }
           #shades .showcase-area .blind-showcase .grid .room-pics .row-3 div:last-child {
             width: 36.11%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shades-9.jpg"); }
+            background-image: url("images/show-shades-9.jpg"); }
     #shades .showcase-area .blind-showcase .slides {
       width: 100%;
       height: 60vw;
@@ -1012,7 +1012,7 @@ section {
           margin: auto; }
 
 #shutters .jumbotron {
-  background-image: url("/images/jumbo-shutters.jpg"); }
+  background-image: url("images/jumbo-shutters.jpg"); }
   #shutters .jumbotron h1 {
     color: #c39450;
     font-size: 15vmin;
@@ -1020,7 +1020,7 @@ section {
     max-width: 1200px;
     letter-spacing: 0.2vmin; }
 #shutters .showcase-area {
-  background: url("/images/grey-background.jpg");
+  background: url("images/grey-background.jpg");
   display: flex;
   flex-direction: column; }
   #shutters .showcase-area .view-selector {
@@ -1099,13 +1099,13 @@ section {
           background-size: cover;
           background-position: left center; }
         #shutters .showcase-area .blind-showcase .grid .close-ups .image:first-child {
-          background-image: url("/images/show-shutters-1.jpg"); }
+          background-image: url("images/show-shutters-1.jpg"); }
         #shutters .showcase-area .blind-showcase .grid .close-ups .image:nth-child(2) {
-          background-image: url("/images/show-shutters-2.jpg"); }
+          background-image: url("images/show-shutters-2.jpg"); }
         #shutters .showcase-area .blind-showcase .grid .close-ups .image:nth-child(3) {
-          background-image: url("/images/show-shutters-3.jpg"); }
+          background-image: url("images/show-shutters-3.jpg"); }
         #shutters .showcase-area .blind-showcase .grid .close-ups .image:nth-child(4) {
-          background-image: url("/images/show-shutters-4.jpg"); }
+          background-image: url("images/show-shutters-4.jpg"); }
       #shutters .showcase-area .blind-showcase .grid .room-pics {
         display: flex;
         flex-direction: column;
@@ -1118,7 +1118,7 @@ section {
           background-repeat: no-repeat;
           background-size: cover;
           background-position: center;
-          background-image: url("/images/show-shutters-5.jpg"); }
+          background-image: url("images/show-shutters-5.jpg"); }
         #shutters .showcase-area .blind-showcase .grid .room-pics .row-2 {
           width: 100%;
           height: 31.9vw;
@@ -1131,14 +1131,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shutters-6.jpg"); }
+            background-image: url("images/show-shutters-6.jpg"); }
           #shutters .showcase-area .blind-showcase .grid .room-pics .row-2 div:last-child {
             width: 63.02%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shutters-7.jpg"); }
+            background-image: url("images/show-shutters-7.jpg"); }
         #shutters .showcase-area .blind-showcase .grid .room-pics .row-3 {
           width: 100%;
           height: 36.8vw;
@@ -1151,14 +1151,14 @@ section {
             background-repeat: no-repeat;
             background-size: cover;
             background-position: left center;
-            background-image: url("/images/show-shutters-8.jpg"); }
+            background-image: url("images/show-shutters-8.jpg"); }
           #shutters .showcase-area .blind-showcase .grid .room-pics .row-3 div:last-child {
             width: 36.11%;
             height: 100%;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
-            background-image: url("/images/show-shutters-9.jpg"); }
+            background-image: url("images/show-shutters-9.jpg"); }
     #shutters .showcase-area .blind-showcase .slides {
       width: 100%;
       height: 60vw;
