--- a/css/ayerst.sass
+++ b/css/ayerst.sass
@@ -258,7 +258,7 @@ body
       font-style: italic
       margin: 3vmin 0
 
-    .home../images
+    .home-images
       margin: 0 auto
       width: 100%
       font-size: 0
