Trying to fix css again

--- a/css/ayerst.sass
+++ b/css/ayerst.sass
@@ -12,7 +12,7 @@ html
 header
   height: 11vmin
   width: 100%
-  background: url("../images/grey-background.jpg")
+  background: url("../../images/grey-background.jpg")
   align-items: center
 
   .container
@@ -143,13 +143,13 @@ nav
 body
   //height: 100%
   width: 100%
-  background-image: url("../images/black-background.jpg")
+  background-image: url("../../images/black-background.jpg")
   text-align: center
 
   .fader
     height: 82vmin
     width: 100%
-    background-image: url("../images/jumbo-white-4.jpg")
+    background-image: url("../../images/jumbo-white-4.jpg")
     background-repeat: no-repeat
     background-size: cover
     background-position: center
@@ -164,7 +164,7 @@ body
   .jumbotron
     height: 82vmin
     width: 100%
-    background-image: url("../images/jumbo-white-4.jpg")
+    background-image: url("../../images/jumbo-white-4.jpg")
     background-repeat: no-repeat
     background-size: cover
     background-position: center
@@ -219,7 +219,7 @@ body
         //transform: translateY(3px)
 
   .blurred
-    background-image: url("../images/jumbo-white-2-blur.jpg")
+    background-image: url("../../images/jumbo-white-2-blur.jpg")
 
   .main
     width: 100%
@@ -325,7 +325,7 @@ body
     flex-direction: column
     justify-content: center
     align-items: center
-    background: url("../images/grey-background.jpg")
+    background: url("../../images/grey-background.jpg")
 
     h1
       color: #555
@@ -373,7 +373,7 @@ body
     display: flex
     flex-direction: column
     align-items: center
-    background: url("../images/grey-background.jpg")
+    background: url("../../images/grey-background.jpg")
 
     h1
       font-style: italic
@@ -391,7 +391,7 @@ body
   .van
     height: 59vmin
     width: 100%
-    background: url("../images/ayerst-truck.jpg")
+    background: url("../../images/ayerst-truck.jpg")
     background-position: center
     background-size: cover
 
@@ -416,7 +416,7 @@ footer
       color: rgba(255,255,255,0.7)
       text-decoration: none
       transition: 0.5s
-      background: url("../images/aw-logo-circle-transparent.png") no-repeat right
+      background: url("../../images/aw-logo-circle-transparent.png") no-repeat right
       background-size: contain
       padding: 0 3.8vmin 0.3vmin 0
       line-height: 4vmin
@@ -526,7 +526,7 @@ section
 #about
 
   .jumbotron
-    background-image: url("../images/jumbo-white-5.jpg")
+    background-image: url("../../images/jumbo-white-5.jpg")
     background-position: center top
 
     h1
@@ -536,12 +536,12 @@ section
   .mobile-service
     width: 100%
     height: 65vmin
-    background: url("../images/ayerst-truck-2.jpg")
+    background: url("../../images/ayerst-truck-2.jpg")
     background-position: center 25%
     background-size: cover
 
   .grey
-    background-image: url("../images/grey-background.jpg")
+    background-image: url("../../images/grey-background.jpg")
 
     h3
       font-size: 3.2vmin
@@ -569,7 +569,7 @@ section
     .about-home
       width: 50%
       height: 100%
-      background-image: url("../images/about-home.jpg")
+      background-image: url("../../images/about-home.jpg")
       display: inline-block
       float: left
       background-position: 20% center
@@ -599,7 +599,7 @@ section
     .about-office
       width: 50%
       height: 100%
-      background-image: url("../images/about-office.jpg")
+      background-image: url("../../images/about-office.jpg")
       display: inline-block
       background-size: cover
       background-position: center
@@ -666,20 +666,20 @@ section
           bottom: 0
 
       .maxxmar
-        background-image: url("../images/demo-maxxmar-square.jpg")
+        background-image: url("../../images/demo-maxxmar-square.jpg")
 
       .hunter
-        background-image: url("../images/demo-hunter-square.jpg")
+        background-image: url("../../images/demo-hunter-square.jpg")
 
       .elite
-        background-image: url("../images/demo-elite-square.jpg")
+        background-image: url("../../images/demo-elite-square.jpg")
 
       .shade
-        background-image: url("../images/demo-shade-square.jpg")
+        background-image: url("../../images/demo-shade-square.jpg")
 
 #blinds
   .jumbotron
-    background-image: url("../images/jumbo-blinds.jpg")
+    background-image: url("../../images/jumbo-blinds.jpg")
     //background-attachment: fixed
 
     h1
@@ -691,7 +691,7 @@ section
       //text-shadow: 2px 2px 0 #39393b, -2px -2px 0 #39393b, 2px -2px 0 #39393b, -2px 2px 0 #39393b, 2px 2px 0 #39393b
 
   .showcase-area
-    background: url("../images/grey-background.jpg")
+    background: url("../../images/grey-background.jpg")
     display: flex
     flex-direction: column
     //justify-content: space-around
@@ -810,19 +810,19 @@ section
             background-position: center
 
           .image:first-child
-            background-image: url("../images/show-blinds-1.jpg")
+            background-image: url("../../images/show-blinds-1.jpg")
             background-position: left center
 
           .image:nth-child(2)
-            background-image: url("../images/show-blinds-2.jpg")
+            background-image: url("../../images/show-blinds-2.jpg")
             background-position: left center
 
           .image:nth-child(3)
-            background-image: url("../images/show-blinds-3.jpg")
+            background-image: url("../../images/show-blinds-3.jpg")
             background-position: left center
 
           .image:nth-child(4)
-            background-image: url("../images/show-blinds-4.jpg")
+            background-image: url("../../images/show-blinds-4.jpg")
             background-position: left center
 
         .room-pics
@@ -838,7 +838,7 @@ section
             background-repeat: no-repeat
             background-size: cover
             background-position: center
-            background-image: url("../images/show-blinds-5.jpg")
+            background-image: url("../../images/show-blinds-5.jpg")
 
           .row-2
             width: 100%
@@ -853,7 +853,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-blinds-6.jpg")
+              background-image: url("../../images/show-blinds-6.jpg")
 
             div:last-child
               width: 63.02%
@@ -861,7 +861,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-blinds-7.jpg")
+              background-image: url("../../images/show-blinds-7.jpg")
 
           .row-3
             width: 100%
@@ -876,7 +876,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-blinds-8.jpg")
+              background-image: url("../../images/show-blinds-8.jpg")
 
             div:last-child
               width: 36.11%
@@ -884,7 +884,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-blinds-9.jpg")
+              background-image: url("../../images/show-blinds-9.jpg")
 
       .slides
         width: 100%
@@ -999,7 +999,7 @@ section
 
 #shades
   .jumbotron
-    background-image: url("../images/jumbo-shades.jpg")
+    background-image: url("../../images/jumbo-shades.jpg")
     //background-attachment: fixed
 
     h1
@@ -1011,7 +1011,7 @@ section
       //text-shadow: 2px 2px 0 #39393b, -2px -2px 0 #39393b, 2px -2px 0 #39393b, -2px 2px 0 #39393b, 2px 2px 0 #39393b
 
   .showcase-area
-    background: url("../images/grey-background.jpg")
+    background: url("../../images/grey-background.jpg")
     display: flex
     flex-direction: column
     //justify-content: space-around
@@ -1129,18 +1129,18 @@ section
             background-position: center
 
           .image:first-child
-            background-image: url("../images/show-shades-1.jpg")
+            background-image: url("../../images/show-shades-1.jpg")
             background-position: left center
 
           .image:nth-child(2)
-            background-image: url("../images/show-shades-2.jpg")
+            background-image: url("../../images/show-shades-2.jpg")
 
           .image:nth-child(3)
             background-position: left center
-            background-image: url("../images/show-shades-3.jpg")
+            background-image: url("../../images/show-shades-3.jpg")
 
           .image:nth-child(4)
-            background-image: url("../images/show-shades-4.jpg")
+            background-image: url("../../images/show-shades-4.jpg")
             background-position: left center
 
         .room-pics
@@ -1156,7 +1156,7 @@ section
             background-repeat: no-repeat
             background-size: cover
             background-position: center
-            background-image: url("../images/show-shades-5.jpg")
+            background-image: url("../../images/show-shades-5.jpg")
 
           .row-2
             width: 100%
@@ -1171,7 +1171,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shades-6.jpg")
+              background-image: url("../../images/show-shades-6.jpg")
 
             div:last-child
               width: 63.02%
@@ -1179,7 +1179,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shades-7.jpg")
+              background-image: url("../../images/show-shades-7.jpg")
 
           .row-3
             width: 100%
@@ -1194,7 +1194,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shades-8.jpg")
+              background-image: url("../../images/show-shades-8.jpg")
 
             div:last-child
               width: 36.11%
@@ -1202,7 +1202,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shades-9.jpg")
+              background-image: url("../../images/show-shades-9.jpg")
 
       .slides
         width: 100%
@@ -1317,7 +1317,7 @@ section
 
 #shutters
   .jumbotron
-    background-image: url("../images/jumbo-shutters.jpg")
+    background-image: url("../../images/jumbo-shutters.jpg")
     //background-attachment: fixed
 
     h1
@@ -1329,7 +1329,7 @@ section
       //text-shadow: 2px 2px 0 #39393b, -2px -2px 0 #39393b, 2px -2px 0 #39393b, -2px 2px 0 #39393b, 2px 2px 0 #39393b
 
   .showcase-area
-    background: url("../images/grey-background.jpg")
+    background: url("../../images/grey-background.jpg")
     display: flex
     flex-direction: column
     //justify-content: space-around
@@ -1447,16 +1447,16 @@ section
             background-position: left center
 
           .image:first-child
-            background-image: url("../images/show-shutters-1.jpg")
+            background-image: url("../../images/show-shutters-1.jpg")
 
           .image:nth-child(2)
-            background-image: url("../images/show-shutters-2.jpg")
+            background-image: url("../../images/show-shutters-2.jpg")
 
           .image:nth-child(3)
-            background-image: url("../images/show-shutters-3.jpg")
+            background-image: url("../../images/show-shutters-3.jpg")
 
           .image:nth-child(4)
-            background-image: url("../images/show-shutters-4.jpg")
+            background-image: url("../../images/show-shutters-4.jpg")
 
         .room-pics
           display: flex
@@ -1471,7 +1471,7 @@ section
             background-repeat: no-repeat
             background-size: cover
             background-position: center
-            background-image: url("../images/show-shutters-5.jpg")
+            background-image: url("../../images/show-shutters-5.jpg")
 
           .row-2
             width: 100%
@@ -1486,7 +1486,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shutters-6.jpg")
+              background-image: url("../../images/show-shutters-6.jpg")
 
             div:last-child
               width: 63.02%
@@ -1494,7 +1494,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shutters-7.jpg")
+              background-image: url("../../images/show-shutters-7.jpg")
 
           .row-3
             width: 100%
@@ -1509,7 +1509,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: left center
-              background-image: url("../images/show-shutters-8.jpg")
+              background-image: url("../../images/show-shutters-8.jpg")
 
             div:last-child
               width: 36.11%
@@ -1517,7 +1517,7 @@ section
               background-repeat: no-repeat
               background-size: cover
               background-position: center
-              background-image: url("../images/show-shutters-9.jpg")
+              background-image: url("../../images/show-shutters-9.jpg")
 
       .slides
         width: 100%
