--- a/css/ayerst.sass
+++ b/css/ayerst.sass
@@ -416,7 +416,7 @@ footer
       color: rgba(255,255,255,0.7)
       text-decoration: none
       transition: 0.5s
-      background-image: url("../images/aw-logo-circle-transparent.png") no-repeat right
+      background: url("../images/aw-logo-circle-transparent.png") no-repeat right
       background-size: contain
       padding: 0 3.8vmin 0.3vmin 0
       line-height: 4vmin
