Fixed nav links

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,11 +2,11 @@
 <nav>
   <ul>
     <li class="list-logo"><img src="images/ayerst-logo.png"></li>
-    <li><a href="/"><h4>Home</h4></a></li>
-    <li><a href="/about/"><h4>About</h4></a></li>
-    <li><a href="/blinds/"><h4>Blinds</h4></a></li>
-    <li><a href="/shades/"><h4>Shades</h4></a></li>
-    <li><a href="/shutters/"><h4>Shutters</h4></a></li>
-    <li><a href="/contact/"><h4>Contact Us</h4></a></li>
+    <li><a href=""><h4>Home</h4></a></li>
+    <li><a href="about/"><h4>About</h4></a></li>
+    <li><a href="blinds/"><h4>Blinds</h4></a></li>
+    <li><a href="shades/"><h4>Shades</h4></a></li>
+    <li><a href="shutters/"><h4>Shutters</h4></a></li>
+    <li><a href="contact/"><h4>Contact Us</h4></a></li>
   </ul>
 </nav>
