Fixed header and footer image links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -125,8 +125,8 @@
     </li>
   </ul>
   <ul class="footer-links">
-    <li><img src="images/ayerst-name.png"></li>
-    <li><a href="#"><h4>About</h4></a></li>
-    <li><a href="#"><h4>Contact Us</h4></a></li>
+    <li><img src="{{ site.baseurl }}/images/ayerst-name.png"></li>
+    <li><a href="{{ site.baseurl }}/about/"><h4>About</h4></a></li>
+    <li><a href="{{ site.baseurl }}/contact/"><h4>Contact Us</h4></a></li>
   </ul>
 </footer>
