--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 
 <header>
   <div class="container">
-    <a href="/">
-      <img href="#" src="images/ayerst-logo.png">
+    <a href="{{ site.baseurl }}/">
+      <img href="#" src="{{ site.baseurl }}/images/ayerst-logo.png">
     </a>
     <div class="header-text">
       <h3>705-325-8767</h3>
