Fixed nav and javascript image links

--- a/_layouts/shutters.html
+++ b/_layouts/shutters.html
@@ -109,23 +109,23 @@
           </div>
 
           <div class="small-slide off-left">
-            <img src="images/show-shutters-8.jpg">
+            <img src="{{ site.baseurl }}/images/show-shutters-8.jpg">
           </div>
 
           <div class="small-slide small-left">
-            <img src="images/show-shutters-9.jpg">
+            <img src="{{ site.baseurl }}/images/show-shutters-9.jpg">
           </div>
 
           <div class="main-slide">
-            <img src="images/show-shutters-1.jpg">
+            <img src="{{ site.baseurl }}/images/show-shutters-1.jpg">
           </div>
 
           <div class="small-slide small-right">
-            <img src="images/show-shutters-2.jpg">
+            <img src="{{ site.baseurl }}/images/show-shutters-2.jpg">
           </div>
 
           <div class="small-slide off-right">
-            <img src="images/show-shutters-3.jpg">
+            <img src="{{ site.baseurl }}/images/show-shutters-3.jpg">
           </div>
 
           <div class="right-scroll">
