--- a/_layouts/shades.html
+++ b/_layouts/shades.html
@@ -109,23 +109,23 @@
           </div>
 
           <div class="small-slide off-left">
-            <img src="images/show-shades-8.jpg">
+            <img src="{{ site.baseurl }}/images/show-shades-8.jpg">
           </div>
 
           <div class="small-slide small-left">
-            <img src="images/show-shades-9.jpg">
+            <img src="{{ site.baseurl }}/images/show-shades-9.jpg">
           </div>
 
           <div class="main-slide">
-            <img src="images/show-shades-1.jpg">
+            <img src="{{ site.baseurl }}/images/show-shades-1.jpg">
           </div>
 
           <div class="small-slide small-right">
-            <img src="images/show-shades-2.jpg">
+            <img src="{{ site.baseurl }}/images/show-shades-2.jpg">
           </div>
 
           <div class="small-slide off-right">
-            <img src="images/show-shades-3.jpg">
+            <img src="{{ site.baseurl }}/images/show-shades-3.jpg">
           </div>
 
           <div class="right-scroll">
