Fixed favicon link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 
 <head>
-  <link rel="icon" href="images/favicon2.ico">
+  <link rel="icon" href="{{ site.baseurl }}/images/favicon2.ico">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/ayerst.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
