--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     </a>
     <div class="header-text">
       <h3>705-325-8767</h3>
-      <h2>Proudly Serving Orillia for 10 years</h2>
+      <h2>Proudly serving Orillia for over 10 years</h2>
     </div>
   </div>
 </header>
