Added contact page

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,8 +1,18 @@
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
 <script>
   $(document).ready(function () {
+
+    var notContact = true;
+    if ($('body').data("options") == 6)
+    {
+      notContact = false;
+    }
+
+    $('.parallax').parallax();
 
     var divFading = false;
     setTimeout(function() {
@@ -20,22 +30,25 @@
 
     $window = $(window);
     var fixedNav = false;
-    $window.scroll(function() {
-      //console.log($window.scrollTop());
-      if (!fixedNav) {
-        if ($window.scrollTop() >= $('header').height()) {
-          $('nav').addClass('fixed-nav');
-          fixedNav = true;
-          $('.fader').css('display', 'none');
+    if (notContact)
+    {
+      $window.scroll(function() {
+        //console.log($window.scrollTop());
+        if (!fixedNav) {
+          if ($window.scrollTop() >= $('header').height()) {
+            $('nav').addClass('fixed-nav');
+            fixedNav = true;
+            $('.fader').css('display', 'none');
+          }
         }
-      }
-      else {
-        if ($window.scrollTop() < $('header').height()) {
-          $('nav').removeClass('fixed-nav');
-          fixedNav = false;
+        else {
+          if ($window.scrollTop() < $('header').height()) {
+            $('nav').removeClass('fixed-nav');
+            fixedNav = false;
+          }
         }
-      }
-    });
+      });
+    }
 
     $window.trigger('scroll');
 
@@ -124,7 +137,11 @@
       $('.small-right').after("<div class='small-slide off-right'><img src='{{ site.baseurl }}/images/show-" + currProdPage + "-" + newRight + ".jpg'></div>");
     });
 
-
+    $('#submit-form').click(function() {
+      event.preventDefault();
+      $('form').fadeOut(1000);
+      $('#thank-you>h1').fadeIn(1000);
+    });
 
   });
 </script>
