--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -8,11 +8,47 @@
 
   {% include nav.html %}
 
-  <body data-options="6">
+  <body id="contact" data-options="6">
+
+    <div class="main">
+      <div class="container">
+        <div class="image"></div>
+        <div class="contact-info">
+          <h1>Contact Us Today</h1>
+          <p>Ayerst Blinds &amp; Shutters is primarily a mobile shop offering at home service. We serve the Orillia area, including Midland, Barrie, Muskoka and surrounding communities. We are available regular business hours as well as evenings and weekends. For more information, please use the contact form below.</p>
+          <div class="form-thankyou">
+            <form method="post" name="myemailform" action="form-to-email.php">
+              <div class="input-name">
+                <label for='name'>Name: </label>
+                <input type="text" name="name">
+              </div>
+              <div class="input-email">
+                <label for='email'>Email Address:</label>
+                <input type="text" name="email">
+              </div>
+              <div class="input-message">
+                <label for='message'>Tell us a bit about your project:</label><br>
+                <textarea name="message"></textarea>
+              </div>
+              <div class="input-submit">
+                <input id="submit-form" type="submit" name='submit' value="Submit">
+              </div>
+            </form>
+            <div id="thank-you"><h1>Thank you!<br>We will be in touch soon</h1></div>
+          </div>
+          <div class="location">
+            <p>Or Call Us @ <span>(705) 325-8767</span><br>
+            60 Colborne St West<br>
+            Orillia, ON<br>
+            L3V 2Y5</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% include footer.html %}
+
   </body>
-  <section>
-    Contact page
-  </section>
 
 </html>
 
