--- a/css/ayerst.sass
+++ b/css/ayerst.sass
@@ -1629,3 +1629,132 @@ section
             max-width: 100%
             max-height: 90%
             margin: auto
+
+#contact
+
+  .main
+    background: url("../images/grey-background.jpg")
+
+    .container
+      width: 100%
+      max-width: 1400px
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      align-items: center
+      justify-content: space-around
+
+      .image
+        width: 35%
+        height: 70vmin
+        background-image: url("../images/contact-main.jpg")
+        background-size: cover
+        background-position: left center
+        background-repeat: no-repeat
+
+      .contact-info
+        width: 65%
+        max-width: 850px
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        align-items: center
+        margin: 3vmin 0
+
+        *
+          margin: 0
+          padding: 0
+
+        p
+          width: 86%
+          color: #39393b
+
+        .form-thankyou
+          width: 82%
+          height: 35vmin
+          position: relative
+
+          form
+            width: 100%
+            text-align: left
+            display: flex
+            flex-wrap: wrap
+            font-size: 3vmin
+            justify-content: space-between
+            margin: 3vmin 0
+            position: absolute
+
+            input[type=text]
+              font-size: 3vmin
+              padding-left: 0.6vmin
+              color: #39393b
+
+            .input-name
+              width: 47%
+              color: #39393b
+
+              input
+                width: 100%
+
+            .input-email
+              width: 46%
+              color: #39393b
+
+              input
+                width: 100%
+
+            .input-message
+              width: 100%
+              color: #39393b
+
+              textarea
+                width: 100%
+                height: 10vmin
+                font-size: 3vmin
+                padding-left: 0.6vmin
+                resize: none
+                color: #39393b
+
+            .input-submit
+              width: 100%
+              text-align: center
+
+              input[type=submit]
+                font-size: 2vmin
+                height: 5vmin
+                width: 15vmin
+                background: $beige
+                border: none
+                border-radius: 0.4vmin
+                cursor: pointer
+                color: #39393b
+                transition: 0.5s
+
+                &:hover
+                  background: darken($beige,10%)
+                  color: #fff
+
+          #thank-you
+            width: 100%
+            height: 100%
+            text-align: center
+            //display: none
+
+            h1
+              font-size: 8vmin
+              position: relative
+              top: 50%
+              transform: translateY(-50%)
+              width: 100%
+              display: none
+
+      .location
+        width: 100%
+        display: flex
+
+        p
+          margin: auto
+          color: #39393b
+
+          span
+            color: $beige
