--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,7 +27,7 @@
     <div class="showcase">
       <!-- <h1>Explore all your options</h1> -->
       <div class="home-images">
-        <a href="/blinds/">
+        <a href="{{ site.baseurl }}/blinds/">
           <img src="images/home-blinds-square.jpg">
           <div class="rollover">
             <h4>BLINDS</h4>
@@ -37,7 +37,7 @@
             </svg>
           </div>
         </a>
-        <a href="/shades/">
+        <a href="{{ site.baseurl }}/shades/">
           <img src="images/home-shades-square.jpg">
           <div class="rollover">
             <h4>SHADES</h4>
@@ -47,7 +47,7 @@
             </svg>
           </div>
         </a>
-        <a href="/shutters/">
+        <a href="{{ site.baseurl }}/shutters/">
           <img src="images/home-shutters-square.jpg">
           <div class="rollover">
             <h4>SHUTTERS</h4>
