Added text animations

--- a/_layouts/blinds.html
+++ b/_layouts/blinds.html
@@ -19,8 +19,8 @@
 
     <div class="main">
 
-      <h1>Find the perfect blinds for any window</h1>
-      <p>At Orillia's Ayerst Blinds &amp; Shutters, we offer a wide range of vertical and horizontal blinds. Blinds allow for easy control of lighting in a room, which makes them ideal for rooms such as bedrooms and theaters. At Ayerst Blinds &amp; Shutters, we offer a very wide range of colours, styles and patterns. In addition, our blinds are available in many different materials, allowing our customers to choose the most suitable blinds for their needs. Feel free to browse the photos below for inspiration.</p>
+      <h1 class="animation-element expand">Find the perfect blinds for any window</h1>
+      <p class="animation-element slide-up">At Orillia's Ayerst Blinds &amp; Shutters, we offer a wide range of vertical and horizontal blinds. Blinds allow for easy control of lighting in a room, which makes them ideal for rooms such as bedrooms and theaters. At Ayerst Blinds &amp; Shutters, we offer a very wide range of colours, styles and patterns. In addition, our blinds are available in many different materials, allowing our customers to choose the most suitable blinds for their needs. Feel free to browse the photos below for inspiration.</p>
 
     </div>
 
