--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -14,9 +14,9 @@
       <div class="container">
         <div class="image"></div>
         <div class="contact-info">
-          <h1>Contact Us Today</h1>
-          <p>Ayerst Blinds &amp; Shutters is primarily a mobile shop offering at home service. We serve the Orillia area, including Midland, Barrie, Muskoka and surrounding communities. We are available regular business hours as well as evenings and weekends. For more information, please use the contact form below.</p>
-          <div class="form-thankyou">
+          <h1 class="animation-element expand">Contact Us Today</h1>
+          <p class="animation-element slide-up">Ayerst Blinds &amp; Shutters is primarily a mobile shop offering at home service. We serve the Orillia area, including Midland, Barrie, Muskoka and surrounding communities. We are available regular business hours as well as evenings and weekends. For more information, please use the contact form below.</p>
+          <div class="form-thankyou animation-element slide-up">
             <form method="post" name="myemailform" action="form-to-email.php">
               <div class="input-name">
                 <label for='name'>Name: </label>
@@ -37,7 +37,7 @@
             <div id="thank-you"><h1>Thank you!<br>We will be in touch soon</h1></div>
           </div>
           <div class="location">
-            <p>Or Call Us @ <span>(705) 325-8767</span><br>
+            <p class="animation-element slide-up">Or Call Us @ <span>(705) 325-8767</span><br>
             60 Colborne St West<br>
             Orillia, ON<br>
             L3V 2Y5</p>
