--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,8 +19,8 @@
 
     <div class="main">
 
-      <h1>The #1 Source for Window Coverings in Orillia</h1>
-      <p>Ayerst Blinds, Shades &amp; Shutters is the #1 source for all window covering needs in the Orillia area. We carry a wide variety of window covering options from many of Canada's top manufacturers. With over 10 years of experience, our trained professionals will help choose the best window covering solutions for your windows. Feel free to explore our website to gain inspiration for your next project! </p>
+      <h1 class="animation-element expand">The #1 Source for Window Coverings in Orillia</h1>
+      <p class="animation-element slide-up">Ayerst Blinds, Shades &amp; Shutters is the #1 source for all window covering needs in the Orillia area. We carry a wide variety of window covering options from many of Canada's top manufacturers. With over 10 years of experience, our trained professionals will help choose the best window covering solutions for your windows. Feel free to explore our website to gain inspiration for your next project! </p>
 
     </div>
 
@@ -61,16 +61,16 @@
     </div>
 
     <div class="contact">
-      <h1>Contact us and learn how we bring our mobile showroom to you!</h1>
-      <p>At Ayerst Blinds, Shades &amp; Shutters, we take the hassle out of selecting and purchasing window coverings by bringing our showroom to you! Gain the advantage of previewing products at your home or business before you buy. Our mobile service will bring our showroom to your residential or commercial location, allowing for an easy selection process.</p>
+      <h1 class="animation-element expand">Contact us and learn how we bring our mobile showroom to you!</h1>
+      <p class="animation-element slide-up">At Ayerst Blinds, Shades &amp; Shutters, we take the hassle out of selecting and purchasing window coverings by bringing our showroom to you! Gain the advantage of previewing products at your home or business before you buy. Our mobile service will bring our showroom to your residential or commercial location, allowing for an easy selection process.</p>
     </div>
 
     <div class="van">
     </div>
 
     <div class="brands">
-      <h1>Select products from the best window covering manufacturers in Canada.</h1>
-      <div class="brand-list">
+      <h1 class="animation-element expand">Select products from the best window covering manufacturers in Canada.</h1>
+      <div class="brand-list animation-element expand">
         <a href="http://www.maxxmar.com/" target="_blank">
           <img src="images/logo-maxxmar-grey.png">
         </a>
