--- a/_layouts/shades.html
+++ b/_layouts/shades.html
@@ -19,8 +19,8 @@
 
     <div class="main">
 
-      <h1>Control your lighting with the best shades</h1>
-      <p>At Orillia's Ayerst Blinds &amp; Shutters, we offer effiecient shades from top manufacturers such as Elite, Hunter Douglas and Shade-O-Matic. Shades allow for easy control of lighting in any room. Shades also provide a high level of efficiency, allowing for energy savings in your home. Ayerst offers a wide variety of colours and options. For more inspiration, please see the examples below or contact us!</p>
+      <h1 class="animation-element expand">Control your lighting with the best shades</h1>
+      <p class="animation-element slide-up">At Orillia's Ayerst Blinds &amp; Shutters, we offer effiecient shades from top manufacturers such as Elite, Hunter Douglas and Shade-O-Matic. Shades allow for easy control of lighting in any room. Shades also provide a high level of efficiency, allowing for energy savings in your home. Ayerst offers a wide variety of colours and options. For more inspiration, please see the examples below or contact us!</p>
 
     </div>
 
