--- a/_layouts/shutters.html
+++ b/_layouts/shutters.html
@@ -19,8 +19,8 @@
 
     <div class="main">
 
-      <h1>Find the perfect blinds for any window</h1>
-      <p>At Orillia's Ayerst Blinds &amp; Shutters, we offer many styles of shutters. We sell shutters from Elite, Shade-O-Matic and Hunter Douglas. A vast selection of frame choices, specialty shapes, configuration options and louver sizes are available. For more information, contact our professionals and feel free to gain more inspiration below.</p>
+      <h1 class="animation-element expand">Find the perfect blinds for any window</h1>
+      <p class="animation-element slide-up">At Orillia's Ayerst Blinds &amp; Shutters, we offer many styles of shutters. We sell shutters from Elite, Shade-O-Matic and Hunter Douglas. A vast selection of frame choices, specialty shapes, configuration options and louver sizes are available. For more information, contact our professionals and feel free to gain more inspiration below.</p>
 
     </div>
 
